ci(rollup): avoid native optional dep by setting ROLLUP_SKIP_NODE_NATIVE=1 during build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,8 @@ jobs:
             export PAGES_BASE_PATH="$REPO_NAME"
           fi
           export GITHUB_PAGES=true
+          # Workaround Rollup native optional dep issue on CI
+          export ROLLUP_SKIP_NODE_NATIVE=1
           npm run build
 
       - name: Create 404.html for SPA fallback
