--- a/.gitignore
+++ b/.gitignore
@@ -7,20 +7,49 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependencies and build
+dist/
+dist-ssr/
+node_modules/
 .vite/
+*.local
 
-# Editor directories and files
+# Editor and IDE
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+*.sw?
 /dist
+
+
+# Claude Flow generated files
+.claude/
+.claude-flow/
+.mcp.json
+claude-flow.config.json
+.swarm/
+.hive-mind/
+memory/
+coordination/
+.roo/
+.roomodes
+CLAUDE.md
+
+# Project specific
+app/public/images/galleries/
+*.db
+*.db-journal
+*.db-wal
+*.sqlite
+*.sqlite-journal
+*.sqlite-wal
+claude-flow
+claude-flow.bat
+claude-flow.ps1
+hive-mind-prompt-*.txt
