chore: update gitignore rules for gallery and test files
- Added .playwright-mcp directory to gitignore for Playwright test artifacts
- Removed gallery ignore rules to ensure all gallery JSON and image files are tracked
- Added clarifying comment about gallery file tracking requirements

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ coordination/
 .roo/
 .roomodes
 CLAUDE.md
+.playwright-mcp
 
 # Gallery files should NOT be ignored - removing any gallery ignore rules
 # All gallery JSON and image files should be tracked
